--- a/Home.html
+++ b/Home.html
@@ -54,12 +54,12 @@
                      </div>
                 </div>
                 <div class="row" id="skillsHeader2">
-                    <div class="col-xs-12 col-sm-offset-1 col-sm-11">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-offset-1 col-lg-11">
                         <h2 style="text-transform: uppercase; color: #616275;" class="fadeInFromLeft">Skills</h2>
                     </div>
                 </div>
                 <div class="row" id="skillBoxContainer" style="padding-top: 15px; padding-bottom: 15px; color: #616275;">
-                    <div class="col-xs-12 col-sm-offset-1 col-sm-4">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-offset-1 col-lg-4">
                         <div id="skillbox1" class="skillBox fadeInFromLeft">
                             <h2 class="text-center" style="font-weight: bold;border-bottom: 1px solid #3ab0e2; padding-bottom: 10px;"><i class="fa fa-cogs" style=""></i>&nbsp;&nbsp;Technical</h2>
                             <p>.Net Framework, ASP.NET (WebForms & MVC), Web API, Entity Framework</p>
@@ -69,7 +69,7 @@
                             <p>Telerik, Kendo UI</p>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-3 deviceTopPadding">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 deviceTopPadding">
                         <div id="skillbox2" class="skillBox fadeInFromLeft">
                             <h2 class="text-center" style="font-weight: bold;border-bottom: 1px solid #34d293; padding-bottom: 10px;"><i class="fa fa-users"></i>&nbsp;&nbsp;Project Management</h2>
                             <p>Project planning</p>
@@ -79,7 +79,7 @@
                             <p>Task allocation & Tracking deliverables</p>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-3 deviceTopPadding">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 deviceTopPadding">
                         <div id="skillbox3" class="skillBox fadeInFromLeft">
                             <h2 class="text-center" style="font-weight: bold;border-bottom: 1px solid #f7d861; padding-bottom: 10px;"><i class="fa fa-certificate"></i>&nbsp;&nbsp;Certifications</h2>
                             <p>Developing ASP.NET MVC 5 Web Applications</p>
@@ -97,7 +97,7 @@
                      </div>
                 </div>
                 <div class="row" id="funNavbar" style="padding-top: 15px;">
-                    <div class="col-xs-12 col-sm-offset-1 col-sm-4">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-offset-1 col-lg-4">
                         <span class="whiteText" id="lblPhotography">Photography</span>
                             <!--<li role="presentation"><a href="#">Travel</a></li>-->
                     </div>
@@ -105,30 +105,30 @@
                 <div class="row" id="photography">
                     <div class="col-xs-12">
                         <div class="row">
-                            <div class="col-xs-6 col-sm-offset-1 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-offset-1 col-lg-2 imageDiv">
                                 <img src="Images/IMG_3312_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail1" />
                             </div>
-                            <div class="col-xs-6 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2 imageDiv">
                                 <img src="Images/IMG_2826_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail2" />
                             </div>
-                            <div class="col-xs-6 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2 imageDiv">
                                 <img src="Images/IMG_3117_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail3" />
                             </div>
-                            <div class="col-xs-6 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2 imageDiv">
                                 <img src="Images/IMG_2410_CMP.jpg" style="max-width: 100%; max-height: 100%;"  class="thumbnail" id="thumbnail4" />
                             </div>    
                         </div>
                         <div class="row" style="">
-                            <div class="col-xs-6 col-sm-offset-1 col-sm-2 imageDiv" >
+                            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-offset-1 col-lg-2 imageDiv" >
                                 <img src="Images/IMG_2794_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail5" />
                             </div>
-                            <div class="col-xs-6 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2 imageDiv">
                                 <img src="Images/IMG_1580_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail6" />
                             </div>
-                            <div class="col-xs-6 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2 imageDiv">
                                 <img src="Images/IMG_2380_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail7" />
                             </div>
-                            <div class="col-xs-6 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-6 col-md-3 col-lg-2 imageDiv">
                                 <img src="Images/IMG_1804_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail8"  />
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                      </div>
                 </div>
                  <div class="row" id="contactContainer" style="padding-top: 15px; padding-bottom: 25px;">
-                    <div class="col-xs-12 col-sm-offset-3 col-sm-6">
+                    <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
                         <div class="row">
                             <div class="col-xs-4">
                                 <a href="https://linkedin.com/in/dayanithy" title="LinkedIn" target="_blank"><img src="Images/linkedin.svg" style="max-width: 50%; max-height: 50%;" /></a>
@@ -176,6 +176,11 @@
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script type="text/javascript">
+        $(document).on('click','.navbar-collapse.in',function(e) {
+            if($(e.target).is('a') ) {
+                $(this).collapse('hide');
+            }
+        });
         $(document).click(function(){
             $('a[href^="#"]').on('click', function (e) {
                 e.preventDefault();
